Scrollbar fixed

--- a/src/components/CityList.module.css
+++ b/src/components/CityList.module.css
@@ -12,7 +12,7 @@
 }
 
 .cityList::-webkit-scrollbar {
-  width: 8px;
+  width: 10px;
 }
 
 .cityList::-webkit-scrollbar-thumb {
