--- a/src/components/CountryList.module.css
+++ b/src/components/CountryList.module.css
@@ -2,11 +2,25 @@
   width: 100%;
   height: 65vh;
   list-style: none;
-  /* overflow-y: scroll; */
+  overflow-y: scroll;
   overflow-x: hidden;
+  padding-right: 6px;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
   align-content: start;
   gap: 1.6rem;
+}
+
+.countryList::-webkit-scrollbar {
+  width: 10px;
+}
+
+.countryList::-webkit-scrollbar-thumb {
+  background-color: #42484d;
+  border-radius: 10px;
+}
+
+.countryList::-webkit-scrollbar-track {
+  background-color: var(--color-dark--1);
 }
